# SincroNyaa

./: LICENSE  README.md  pyproject.toml  sincronyaa.py
docs/: CHANGELOG.md  PSEUDOCODE.md  ideas.md
